# Annotation-Extractor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt  test.docx  vercel.json
api/: errors.py  main.py
frontend/: app.js  index.html  style.css
highlight_extractor/: __init__.py  ai_organizer.py  cli.py  dispatcher.py  docx_extractor.py  exporters.py  pdf_extractor.py  schema.py
scratch/: create_demo_pdf.py  test_docx_comments.py  test_export.py
